# MasterThesis

./: .gitignore  README.md
hawkingPage/: CMakeLists.txt  README.md  bh_absorption  black_hole.cpp  black_hole.h  main.cpp  normalise_graph.py
hawkingRadiation/: greybody.cpp  greybody.hpp  hawking.cpp  hawking.hpp  main.cpp  main.cpp.old  page  page_spectrum_all_species.csv  spectrum.csv  teukolsky_radial.cpp  teukolsky_radial.hpp
hawkingRadiation/plottingData/: evaporation_curve.py  page_spectrum_all_species.csv  plot_page_spectrum.py  qnm_peaks.py
teukolskyEquation/: teukolksy2D  teukolksy2D.cpp  teukolsky1D  teukolsky1D.cpp  visualize.py
teukolskyEquation/data/: frame_0.csv  frame_100.csv  frame_1000.csv  frame_1050.csv  frame_1100.csv  frame_1150.csv  frame_1200.csv  frame_1250.csv  frame_1300.csv  frame_1350.csv  frame_1400.csv  frame_1450.csv  frame_150.csv  frame_200.csv  frame_250.csv  frame_300.csv  frame_350.csv  frame_400.csv  frame_450.csv  frame_50.csv  frame_500.csv  frame_550.csv  frame_600.csv  frame_650.csv  frame_700.csv  frame_750.csv  frame_800.csv  frame_850.csv  frame_900.csv  frame_950.csv  psi_step_0.csv  psi_step_100.csv  psi_step_200.csv  psi_step_300.csv  psi_step_700.csv
